# AI-robot-control

./: .gitignore  .gitmodules  INSTALL.md  README.md  docker_history.txt  install.sh  setup.py
Pickbot/pickbot_simulation/: CMakeLists.txt  package.xml
Pickbot/pickbot_simulation/vacuum_gripper/: CMakeLists.txt  package.xml
Pickbot/pickbot_training/: CMakeLists.txt  package.xml
Pickbot_with_moveit/motion_control/: .~lock.moveit_position_tuning.ods#  CMakeLists.txt  package.xml
baseline_internal_changes/: trpo_mpi.py
environments/: README.md  __init__.py  gazebo_connection.py  joint_array_publisher.py  joint_publisher.py  object_information.yml  pickbot_env.py  pickbot_env_continuous.py  pickbot_env_npstate.py  pickbot_env_registration.py  pickbot_env_stringstate.py  pickbot_lift_continuous.py  pickbot_lift_npstate.py  pickbot_reach_5js_continuous.py  pickbot_reach_5js_moveit.py  pickbot_reach_cam_env.py  pickbot_reach_env.py  pickbot_withgripper_env_continuous.py  pickbot_withgripper_env_npstate.py  target_object_list  util_env.py  util_math.py
evaluations/: evaluation_script.py
experiments/: CMakeLists.txt  package.xml  run.py
experiments/gym_atari/: What is missing
experiments/launch/: train_reach_deepq.launch  train_reach_trpo_continuous.launch  use_case-1_cont.launch  use_case-2_discrete.launch
experiments/test/: test_gripper_in_continuous_env.py
python_pkgs/: list.txt
simulation/: CMakeLists.txt  package.xml
simulation/config/: pickbot(Position).yaml  pickbot.yaml
simulation/launch/: main.launch  pickbot_control.launch  pickbot_motion_control.launch  sim_research.launch  spawn_pickbot.launch  use_case-1.launch  use_case-1_simplified.launch  use_case-2.launch
simulation/motion_control/: README.md  moveit_position_tuning.ods  pickbot_motion_control.py  ur10_keyboard_motion.py  ur10_motion_script.py  ur10_motion_test.py  ur10_photo_shooter.py
simulation/script/: gz_subscriber.py
simulation/urdf/: UR PARAMETER.ods  pickbot(Position).urdf  (+2 more)
universal_robot/: README.md
(+504 files in other folders)
